--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main class="main">
             <header class="header">
             <div class="logo-contain">
-                <img src="/images/quizlogo.png"  alt="Quiz Logo">
+                <img src="images/quizlogo.png"  alt="Quiz Logo">
                 <a href="#" class="logo">QuizTime</a>
             </div>
         </header>
