--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <main class="main">
             <header class="header">
-            <div class="logo-contain">
+            <div class="quizlogo-contain">
                 <img src="images/quizlogo.png"  alt="Quiz Logo">
-                <a href="#" class="logo">QuizTime</a>
+                <a href="#" class="quizlogo">QuizTime</a>
             </div>
         </header>
         
